--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title> Mi primera Página Web </title>
-    <link rel="stylesheet" href="./Style/Estilo.css">
+    <link rel="stylesheet" href="./Los Juegos Del Hambre/Style/Estilo.css">
     <meta charset="utf-8">
   </head>
   <body>
