--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1> Mi primera página web. </h1>
     <ul>
-      <li><a href="./Los Juegos Del Hambre/Los Juegos Del Hambre.html"></a></li>
+      <li><a href="./Los Juegos Del Hambre/Los Juegos Del Hambre.html"> Los Juegos Del Hambre </a></li>
     </ul>
   </body>
 </html>
